--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "bluebird": "^3.5.1",
+    "dotenv": "^6.0.0",
     "hiredis": "^0.5.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "sprintf-js": "^1.1.1",
+    "verror": "^1.10.0"
   }
 }
