--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "",
   "devDependencies": {
-    "eslint": "^5.3.0"
+    "aws-sdk": "^2.294.0",
+    "eslint": "^5.3.0",
+    "js-beautify": "^1.7.5",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
     "dotenv": "^6.0.0",
-    "hiredis": "^0.5.0",
     "redis": "^2.8.0",
     "sprintf-js": "^1.1.1",
+    "uuid": "^3.3.2",
     "verror": "^1.10.0"
+  },
+  "optionalDependencies": {
+    "hiredis": "^0.5.0"
   }
 }
